--- a/app/src/main/res/layout/placeholder_row_layout.xml
+++ b/app/src/main/res/layout/placeholder_row_layout.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
+    android:layout_marginTop="@dimen/margin_4"
+    android:layout_marginBottom="@dimen/margin_4"
     android:layout_height="200dp">
 
     <View
         android:id="@+id/view"
-        android:layout_width="200dp"
+        android:layout_width="@dimen/width_200"
         android:background="@color/placeholderColor"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,21 +18,21 @@
 
     <View
         android:id="@+id/view2"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/width_0"
+        android:layout_height="@dimen/height_50"
         android:background="@color/placeholderColor"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginStart="@dimen/margin_12"
+        android:layout_marginTop="@dimen/margin_12"
+        android:layout_marginEnd="@dimen/margin_12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/view"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view3"
-        android:layout_width="0dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="@dimen/width_0"
+        android:layout_height="@dimen/height_65"
+        android:layout_marginTop="@dimen/margin_12"
         android:background="@color/placeholderColor"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintStart_toStartOf="@+id/view2"
@@ -40,10 +40,10 @@
 
     <View
         android:id="@+id/view4"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
+        android:layout_width="@dimen/width_36"
+        android:layout_height="@dimen/height_36"
+        android:layout_marginTop="@dimen/margin_12"
+        android:layout_marginBottom="@dimen/margin_12"
         android:background="@color/placeholderColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/view3"
@@ -51,18 +51,18 @@
 
     <View
         android:id="@+id/view5"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="24dp"
+        android:layout_width="@dimen/width_36"
+        android:layout_height="@dimen/height_36"
+        android:layout_marginStart="@dimen/margin_24"
         android:background="@color/placeholderColor"
         app:layout_constraintStart_toEndOf="@+id/view4"
         app:layout_constraintTop_toTopOf="@+id/view4" />
 
     <View
         android:id="@+id/view6"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="24dp"
+        android:layout_width="@dimen/width_36"
+        android:layout_height="@dimen/height_36"
+        android:layout_marginStart="@dimen/margin_24"
         android:background="@color/placeholderColor"
         app:layout_constraintStart_toEndOf="@+id/view5"
         app:layout_constraintTop_toTopOf="@+id/view5" />
