--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="height_0">0dp</dimen>
     <dimen name="height_36">36dp</dimen>
     <dimen name="height_50">50dp</dimen>
+    <dimen name="height_60">60dp</dimen>
     <dimen name="height_65">65dp</dimen>
     <dimen name="height_100">100dp</dimen>
 
@@ -19,6 +20,7 @@
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_12">12dp</dimen>
+    <dimen name="margin_16">16dp</dimen>
     <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_36">36dp</dimen>
 
