--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/main_imageView"
-        android:layout_width="0dp"
-        android:layout_height="250dp"
+        android:layout_width="@dimen/width_0"
+        android:layout_height="@dimen/height_250"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
     <View
         android:id="@+id/gradient_overlay"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/height_100"
         android:background="@drawable/gradient_overlay"
         app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
         app:layout_constraintEnd_toEndOf="@+id/main_imageView"
@@ -34,11 +34,11 @@
         android:id="@+id/time_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="@dimen/margin_24"
+        android:layout_marginBottom="@dimen/margin_12"
         android:text="100"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
         app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />
@@ -60,7 +60,7 @@
         android:layout_marginEnd="32dp"
         android:text="100"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_16"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/time_textView"
         app:layout_constraintEnd_toStartOf="@+id/time_textView" />
@@ -77,15 +77,15 @@
 
     <TextView
         android:id="@+id/title_textView"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginStart="@dimen/margin_12"
+        android:layout_marginTop="@dimen/margin_20"
+        android:layout_marginEnd="@dimen/margin_12"
         android:fontFamily="@font/courgette"
         android:text="Title"
         android:textColor="@color/titleColor"
-        android:textSize="22sp"
+        android:textSize="@dimen/text_20"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +95,7 @@
         android:id="@+id/vegetarian_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/margin_12"
         android:src="@drawable/ic_checkmark"
         app:layout_constraintStart_toStartOf="@+id/title_textView"
         app:layout_constraintTop_toBottomOf="@+id/title_textView"
@@ -105,7 +105,7 @@
         android:id="@+id/vegetarian_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_8"
         android:text="@string/vegetarian"
         android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
@@ -116,7 +116,7 @@
         android:id="@+id/vegan_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/margin_12"
         android:src="@drawable/ic_checkmark"
         app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
         app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
@@ -126,7 +126,7 @@
         android:id="@+id/vegan_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_8"
         android:text="@string/vegan"
         android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
@@ -137,7 +137,7 @@
         android:id="@+id/gluten_free_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="@dimen/margin_24"
         android:src="@drawable/ic_checkmark"
         app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
         app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
@@ -148,7 +148,7 @@
         android:id="@+id/gluten_free_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_8"
         android:text="@string/gluten_free"
         android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
@@ -159,7 +159,7 @@
         android:id="@+id/dairy_free_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/margin_12"
         android:src="@drawable/ic_checkmark"
         app:layout_constraintStart_toStartOf="@+id/gluten_free_imageView"
         app:layout_constraintTop_toBottomOf="@+id/gluten_free_imageView"
@@ -169,7 +169,7 @@
         android:id="@+id/dairy_free_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_8"
         android:text="@string/dairy_free"
         android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/dairy_free_imageView"
@@ -180,7 +180,7 @@
         android:id="@+id/healthy_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="@dimen/margin_24"
         android:src="@drawable/ic_checkmark"
         app:layout_constraintBottom_toBottomOf="@+id/gluten_free_textView"
         app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
@@ -191,7 +191,7 @@
         android:id="@+id/healthy_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_8"
         android:text="@string/healthy"
         android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
@@ -202,7 +202,7 @@
         android:id="@+id/cheap_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/margin_12"
         android:src="@drawable/ic_checkmark"
         app:layout_constraintStart_toStartOf="@+id/healthy_imageView"
         app:layout_constraintTop_toBottomOf="@+id/healthy_imageView"
@@ -212,7 +212,7 @@
         android:id="@+id/cheap_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_8"
         android:text="@string/cheap"
         android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
@@ -222,10 +222,10 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="12dp"
+        android:layout_height="@dimen/height_0"
+        android:layout_marginStart="@dimen/margin_12"
+        android:layout_marginTop="@dimen/margin_12"
+        android:layout_marginEnd="@dimen/margin_12"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -241,7 +241,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_16" />
 
         </LinearLayout>
     </ScrollView>
