--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,8 +11,10 @@
     <dimen name="height_60">60dp</dimen>
     <dimen name="height_65">65dp</dimen>
     <dimen name="height_100">100dp</dimen>
+    <dimen name="height_250">250dp</dimen>
 
     <!-- Text size -->
+    <dimen name="text_16">16sp</dimen>
     <dimen name="text_18">18sp</dimen>
     <dimen name="text_20">20sp</dimen>
 
@@ -21,6 +23,7 @@
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_36">36dp</dimen>
 
